--- a/app/client/templates/Navbar.html
+++ b/app/client/templates/Navbar.html
@@ -1,7 +1,7 @@
 <template name="Navbar">
   <div id="KillerNavbar">
     <div class="clearfix">
-      <nav class="navbar navbar-default">
+      <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".collapsingMenu" aria-expanded="false">
@@ -10,7 +10,8 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">LOGO HERE</a>
+            <a class="navbar-brand" href="#"><img class="little-Logo" src="https://s3-eu-west-1.amazonaws.com/killerpicks/killerZip.png" alt="Logo" /></a>
+            <span class="visible-xs"><h3>killer <i class="fa fa-futbol-o killer-dot"></i> football</h3></span>
           </div>
 
           {{#if currentUser}}
