--- a/app/client/templates/leagues/KillerFinishedLeagues.html
+++ b/app/client/templates/leagues/KillerFinishedLeagues.html
@@ -1,24 +1,17 @@
 <template name="KillerFinishedLeagues">
   <div id="KillerFinishedLeagues">
-    <div class="table-responsive table-wrapper">
-      <table id="KillerFinishedTable" class="table table-hover">
-        <thead>
-          <tr>
-            <th>League name</th>
-            <th>Winner</th>
-            <th>Details</th>
-          </tr>
-        </thead>
-        <tbody>
-          {{#each this}}
-            <tr>
-              <td>{{leagueName}}</td>
-              <td>{{leagueWinner}}</td>
-              <td>{{> MiniFinishedLeagueDetails}}</td>
-            </tr>
-          {{/each}}
-        </tbody>
-      </table>
+
+    <div class="panel panel-failure">
+
     </div>
+
+  {{#each this}}
+    <tr>
+      <td>{{leagueName}}</td>
+      <td>{{leagueWinner}}</td>
+      <td>{{> MiniFinishedLeagueDetails}}</td>
+    </tr>
+  {{/each}}
+
   </div>
 </template>
