--- a/app/client/templates/leagues/KillerAliveLeagues.html
+++ b/app/client/templates/leagues/KillerAliveLeagues.html
@@ -25,17 +25,15 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
+          <div class="col-xs-12 col-md-6 col-sm-12 col-lg-6">
             {{#if acceptingNewMembers}}
               {{> SharingWithCode entryCode=_id}}
             {{else}}
               {{> MiniActiveLeagueDetails}}
             {{/if}}
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
-            {{> KillerChoiceWidget}}
+            <div class="col-xs-12 col-lg-6 col-md-6 col-sm-12">
+              {{> KillerChoiceWidget}}
+            </div>
           </div>
         </div>
 
