--- a/app/client/main.css
+++ b/app/client/main.css
@@ -67,6 +67,14 @@ body {
   /*background-color: green;*/
 }
 
+#KillerAliveLeagues {
+  text-align: center;
+}
+
+.LeaguePanel {
+  display: inline-block;
+}
+
 @media only screen and (min-width : 768px) {
    .leagueRow.row {
 	 display: flex;
@@ -106,29 +114,39 @@ text-align: center;
   padding-bottom: 5px;
 }
 
+.killerChoiceForm select {
+  width : auto !important;
+  display: inline;
+}
+
 .killerChoiceForm .form-group, .repickChoiceForm .btn {
   margin-top: 5px;
   margin-bottom: 5px;
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 405px) {
 
    .panel-body { font-size: 90%; }
 
    .select-responsive {
       height: 22px;
       padding: 2px 5px;
-      font-size: 12px;
+      font-size: 10px;
       line-height: 1.5;
       border-radius: 3px;
+      width: auto;
     }
 
     .btn-responsive, .form-responsive {
-      padding:2px 4px;
-      font-size:80%;
+      padding:5px 5px;
+      font-size:10px;
       line-height: 1;
     }
 }
+
+/*@media only screen and (max-width: 405px) {
+
+}*/
 
 .no-pad-left {
   padding-left: 0;
@@ -154,6 +172,11 @@ text-align: center;
   background-color:rgba(70,214,11,0.7);
   border-radius: 5px;
   text-align: center;
+}
+
+.MiniActiveLeagueDetails ul {
+  padding-left: 0;
+  list-style-type: none;
 }
 
 /*show hide panels*/
