--- a/app/client/templates/bits/KillerChoiceWidget.html
+++ b/app/client/templates/bits/KillerChoiceWidget.html
@@ -11,7 +11,7 @@
         {{/if}}
       {{else}}
         {{#if chosenTeamName}}
-          <form id="REPICK_{{this._id}}" class="repickChoiceForm">
+          <form id="REPICK_{{this._id}}" class="repickChoiceForm form-inline">
             <span>You picked: <span class="pick-name">{{chosenTeamName}}</span></span>
             <button class="btn btn-default btn-responsive" type="submit">Change</button>
           </form>
@@ -26,26 +26,20 @@
 <template name="KillerChoiceForm">
   <div id="KillerChoiceForm">
     <div class="container-fluid">
-      <div class="row">
-        <form class="killerChoiceForm form-inline">
-          <div class="col-xs-8">
-            <div class="form-group">
-              <label class="sr-only" for="DD_{{this._id}}">Pick a team</label>
-              <select class="teamsLeftDropDown form-control select-responsive" id="DD_{{this._id}}">
-                <option selected="true" disabled>Pick a team</option>
-                {{#each teamsLeft}}
-                  <option value={{.}}>{{.}}</option>
-                {{/each}}
-              </select>
-            </div>
+      <form class="killerChoiceForm form-inline">
+        <div class="form-group">
+          <div class="input-group">
+            <label class="sr-only" for="DD_{{this._id}}">Pick a team</label>
+            <select class="teamsLeftDropDown form-control select-responsive" id="DD_{{this._id}}">
+              <option selected="true" disabled>Pick a team</option>
+              {{#each teamsLeft}}
+                <option value={{.}}>{{.}}</option>
+              {{/each}}
+            </select>
+            <span class="input-group-btn"><button type="submit" name="killerChoiceButton" value="Submit" class="btn btn-default btn-responsive">Submit</button></span>
           </div>
-          <div class="col-xs-2">
-            <div class="form-group">
-              <button type="submit" name="killerChoiceButton" value="Submit" class="btn btn-default btn-responsive">Submit</button>
-            </div>
-          </div>
-        </form>
-      </div>
+        </div>
+      </form>
     </div>
   </div>
 </template>
