--- a/app/client/templates/KillerContent.html
+++ b/app/client/templates/KillerContent.html
@@ -8,7 +8,7 @@
           {{> KillerAdBannerTop}}
           {{> KillerAdBannerLeft}}
           {{#if Template.subscriptionsReady}}
-            {{> KillerGameweekMatches}}
+            {{> KillerGameWeekMatches}}
             {{> KillerInstructions}}
             {{> KillerLeagues}}
           {{else}}
