--- a/app/client/templates/KillerInstructions.html
+++ b/app/client/templates/KillerInstructions.html
@@ -1,5 +1,5 @@
 <template name="KillerInstructions">
   <div id="KillerInstructions">
-    INSTRUCTIONS
+    <span>Welcome to Killer! See your leagues below, or follow the links in the menu bar to get started. If you need any help, <a href="mailto:chairman@killer.football?subject=Help">just ask!</a></span>
   </div>
 </template>
