--- a/app/client/templates/Navbar.html
+++ b/app/client/templates/Navbar.html
@@ -19,8 +19,8 @@
               <ul class="nav navbar-nav navbar-left">
                 <li><a class="modalButton" data-modal="modalStartKillerLeague" id="buttonStartKillerLeague">Start a league</a></li>
                 <li><a class="modalButton" data-modal="modalJoinKillerLeague" id="buttonJoinKillerLeague">Join a league</a></li>
-                <li><a class="modalButton" data-modal="modalKillerRules" id="buttonKillerRules">Full rules</a></li>
                 <li><a class="modalButton" data-modal="modalGettingStarted" id="buttonGettingStarted">Getting started</a></li>
+                <li><a class="modalButton" data-modal="modalKillerRules" id="buttonKillerRules">Full rules</a></li>
               </ul>
 
               <ul class="nav navbar-nav navbar-right">
@@ -31,11 +31,11 @@
           {{else}}
             <div class="collapse navbar-collapse collapsingMenu">
               <ul class="nav navbar-nav navbar-left">
-                <li><button class="btn modalButton navbar-btn" data-modal="modalKillerRules" id="buttonKillerRules">Full rules</button></li>
-                <li><button class="btn modalButton navbar-btn" data-modal="modalGettingStarted" id="buttonGettingStarted">Getting started</button></li>
+                <li><a class="modalButton" data-modal="modalGettingStarted" id="buttonGettingStarted">Getting started</a></li>
+                <li><a class="modalButton" data-modal="modalKillerRules" id="buttonKillerRules">Full rules</a></li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
-                <li><button class="btn modalButton navbar-btn" data-modal="modalLoginForm">Log in</button></li>
+                <li><a class="modalButton" data-modal="modalLoginForm">Log in</a></li>
               </ul>
             </div>
           {{/if}}
