--- a/app/client/templates/bits/KillerGameweekMatches.html
+++ b/app/client/templates/bits/KillerGameweekMatches.html
@@ -3,7 +3,7 @@
     <div class="container-fluid match-border">
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12  match-date">
-          <span>Fixtures - deadline {{formatDate currentDeadline "deadlineDate"}} (<a class="show-hide-fixtures" id="showHideFixtures" data-toggle="collapse" href="#collapseFixtures" aria-expanded="false">{{showHideFixtures}} <span class="caret"></span></a>)</span>
+          <span>Fixtures - deadline {{formatDate currentDeadline "deadlineDate"}} (<a class="show-hide" id="showHideFixtures" data-toggle="collapse" href="#collapseFixtures" aria-expanded="false">{{showHideFixtures}} <span class="caret"></span></a>)</span>
         </div>
       </div>
       <div class="row row-centered collapse" id="collapseFixtures">
