--- a/app/client/css/matches.css
+++ b/app/client/css/matches.css
@@ -28,7 +28,7 @@
   border: 2px solid red;
   border-radius: 0 0 5px 5px;
   border-top: none;
-  background-color: blue;
+  background-color: navy;
   padding-top: 3px;
   text-align: center;
 }
@@ -49,7 +49,7 @@
   padding: 3px 0 5px 0;
 }
 
-.match-date span {
+.match-date > span {
   border-bottom: 1px dotted red;
 }
 
@@ -57,4 +57,8 @@
   .match-date {
     font-size: 10px;
   }
+}
+
+.show-hide {
+  color: #9933ff !important;
 }
