--- a/app/client/main.css
+++ b/app/client/main.css
@@ -16,12 +16,42 @@ body {
   }
 }
 
+.getting-started a {
+  color: #9933ff !important;
+}
+
+.getting-started {
+  background-color: navy;
+  color: white;
+  border-radius: 3px;
+}
+
+.getting-started > p {
+  padding : 5px;
+  text-align: left;
+}
+
+.getting-started > h4 {
+  padding-top : 8px;
+}
+
+.getting-started > ul {
+  text-align : left;
+  list-style-type: none;
+  padding: 5px;
+  margin-left : 0;
+}
+
 #KillerContent {
   background-image: url("http://www.micronationalnews.com/wp-content/uploads/2015/06/Limes-Football-2015.jpg");
   background-size: cover;
 }
 
 .entry-code {
+  font-weight: bold;
+}
+
+.bold {
   font-weight: bold;
 }
 
@@ -38,8 +68,12 @@ body {
   padding : 0 5px;
 }
 
-@media (max-width: 991px){
-  .navbar-nav > li {
+.nav a {
+  cursor : pointer;
+}
+
+@media (max-width: 770px){
+  .dropdown-menu > li {
     float: left;
     width: 50%;
   }
@@ -69,30 +103,6 @@ body {
   margin-bottom: 0;
 }
 
-.leagueRow {
-  /*text-align: center;*/
-  /*background-color: green;*/
-}
-
-#KillerAliveLeagues {
-  text-align: center;
-}
-
-.LeaguePanel {
-  display: inline-block;
-  max-width: 400px;
-}
-
-@media only screen and (min-width : 768px) {
-   .leagueRow.row {
-	 display: flex;
-	 flex-wrap: wrap;
-   }
-   .leagueRow.row > [class*='col-'] {
-	 display: flex;
-	 flex-direction: column;
-   }
-}
 
 .full-height  {
   position: relative;
@@ -116,11 +126,7 @@ text-align: center;
   padding-left: 0.6em;*/
 }
 
-.panel-deadline {
-  font-weight: bold;
-  text-align: center;
-  padding-bottom: 5px;
-}
+
 
 .killerChoiceForm select {
   width : auto !important;
@@ -130,26 +136,6 @@ text-align: center;
 .killerChoiceForm .form-group, .repickChoiceForm .btn {
   margin-top: 5px;
   margin-bottom: 5px;
-}
-
-@media only screen and (max-width: 405px) {
-
-   .panel-body { font-size: 90%; }
-
-   .select-responsive {
-      height: 22px;
-      padding: 2px 5px;
-      font-size: 10px;
-      line-height: 1.5;
-      border-radius: 3px;
-      width: auto;
-    }
-
-    .btn-responsive, .form-responsive {
-      padding:5px 5px;
-      font-size:10px;
-      line-height: 1;
-    }
 }
 
 /*@media only screen and (max-width: 405px) {
@@ -182,11 +168,6 @@ text-align: center;
   text-align: center;
 }
 
-.MiniActiveLeagueDetails ul {
-  padding-left: 0;
-  list-style-type: none;
-}
-
 /*show hide panels*/
 
 .hidden-mobile-details.in, .hidden-mobile-details.collapsing {
@@ -203,11 +184,6 @@ text-align: center;
   -moz-columns: 2;
 }
 
-.players-list {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
@@ -253,56 +229,6 @@ text-align: center;
   font-size: 21px;
 }
 
-/*Sharing buttons*/
-
-/* TODO: Change border radius */
-/* TODO: move to its own css file */
-
-.sharingButtonsList li {
-  display: inline;
-}
-
-.display-inline {
-  display: inline;
-}
-
-.btn-twitter {
-    background: #00acee;
-    border-radius: 0;
-    color: #fff
-}
-.btn-twitter:link, .btn-twitter:visited {
-    color: #fff
-}
-.btn-twitter:active, .btn-twitter:hover {
-    background: #0087bd;
-    color: #fff
-}
-.btn-facebook {
-    background: #3b5998;
-    border-radius: 0;
-    color: #fff
-}
-.btn-facebook:link, .btn-facebook:visited {
-    color: #fff
-}
-.btn-facebook:active, .btn-facebook:hover {
-    background: #30477a;
-    color: #fff
-}
-/* TODO: change colours for email */
-.btn-email {
-    background: #3b5998;
-    border-radius: 0;
-    color: #fff
-}
-.btn-email:link, .btn-email:visited {
-    color: #fff
-}
-.btn-email:active, .btn-email:hover {
-    background: #30477a;
-    color: #fff
-}
 
 /*footer*/
 
