--- a/app/client/templates/KillerExplanation.html
+++ b/app/client/templates/KillerExplanation.html
@@ -9,9 +9,9 @@
       <p class="smaller-font">
         Getting started is easy: set up a free league, invite your friends, pick one team to win over the weekend's Premier League action, and that's it! Get it right and you live to play for another week. Get it wrong, and it's game over!
       </p>
-      <p><button class="btn modalButton" data-modal="modalSignupForm">Sign up now</button></p>
+      <p><a class="btn modalButton" data-modal="modalSignupForm">Sign up now</a></p>
       <p>
-        For more details check out the <b>Getting Started</b> or <b>Full rules</b> links above, or email <a href="mailto:chairman@killer.football?subject=help">chairman@killer.football</a>.
+        For more details check out <a class="modalButton" data-modal="modalGettingStarted" id="buttonGettingStarted">Getting started</a> or <a class="modalButton" data-modal="modalKillerRules" id="buttonKillerRules">Full rules</a>, or email <a href="mailto:chairman@killer.football?subject=help">chairman@killer.football</a>.
       </p>
     </div>
   </div>
