--- a/app/client/templates/modals/SignupForm.html
+++ b/app/client/templates/modals/SignupForm.html
@@ -8,7 +8,7 @@
           </div>
           <div class="modal-body">
             <div class="form-signup">
-                {{> atForm state='signUp'}}
+                {{> atForm state="signUp"}}
             </div>
           </div>
         </div>
