--- a/app/client/templates/WelcomeNote.html
+++ b/app/client/templates/WelcomeNote.html
@@ -12,12 +12,6 @@
           <span class="bold">killer</SPAN> is a football predictions game. Get together with your friends, form a (free) league, and see who's the best at picking winners.
         </p>
         <p class="smaller-font">
-          If you've been sent a league entry code, hit <a class="modalButton" data-modal="modalJoinKillerLeague">Join a league</a>, paste in the code, and you're good to go.
-        </p>
-        <p class="smaller-font">
-          If you'd like to start your own league, just hit <a class="modalButton" data-modal="modalStartKillerLeague">Start a league</a> and choose when you want it to start. You'll be given a league entry code to send to your friends. We've made life easy for you with links for sharing the code on Twitter, on Facebook, or by email - but you can send it to your friends however you like.
-        </p>
-        <p class="smaller-font">
           All you need to do to play is <span class="bold">pick a team you think will win</span> over the weekend's Premier League action. <span class="bold">Get it right and you live</span> to play for another week. <span class="bold">Get it wrong, and you're eliminated</span> from the league (don't worry, you can just start another!). <span class="bold">Last one standing is crowned champion.</span>
         </p>
         <ul>
@@ -28,6 +22,13 @@
           <li><span class="fa fa-bomb fa-inverse"></span> Once the deadline passes, you can see your friends' picks by visiting the site</li>
           <li><span class="fa fa-bomb fa-inverse"></span> If ALL remaining players fail to pick a winner, the round is reset and no one is eliminated</li>
         </ul>
+        <hr>
+        <p class="smaller-font">
+          If you've been sent a league entry code, hit <a class="modalButton" data-modal="modalJoinKillerLeague">Join a league</a>, paste in the code, and you're good to go.
+        </p>
+        <p class="smaller-font">
+          If you'd like to start your own league, just hit <a class="modalButton" data-modal="modalStartKillerLeague">Start a league</a> and choose when you want it to start. You'll be given a league entry code to send to your friends - using our handy sharing buttons, or however you like.
+        </p>
       </div>
     </div>
   </div>
