--- a/app/client/templates/modals/KillerRules.html
+++ b/app/client/templates/modals/KillerRules.html
@@ -10,26 +10,20 @@
           <div class="modal-body">
             <h3>Full rules of the game</h3>
             <br>
-            <br>
             <ul>
               <li>Killer is a <b>free football predictions</b> web app</li>
               <li><b>Players form "leagues"</b> together and battle it out to see who's best at picking winners</li>
               <li>Players can form as many leagues as they like for free - at any time during the Premier League season. A unique entry code is generated and league chairmen should share this with their friends in good time for them to make their picks</li>
-              <li><b>Players can agree a league entry fee</b> so there is a prize pool. Currently, Killer just gets players to agree to the fee, but takes no responsibility for collecting or administering it. We hope we'll be able to incorporate this in the future</li>
-              <li>At the start of each league, <b>every player begins with three "lives"</b></li>
               <li><b>Every week, each player picks a Premier League team</b> they think will win their fixture that week</li>
               <li><b>Once a player has picked a team, they cannot pick that team again in that league</b></li>
-              <li>If the player's chosen team wins, great. <b>If they lose or draw, the player loses a life</b></li>
-              <li><b>The deadline for submitting your choices for the week is around 12 noon (UK time) on Saturdays.  Players failing to submit teams before then will be given random teams</b></li>
-              <li><b>Once a player loses all of their lives, they are "dead"</b> for the rest of that league</li>
-              <li><b>The last player with lives left in the league is the champion</b> and wins the prize pool if there is one</li>
-              <li>If the league ends with two or more players all "dying" at the same time, they are considered joint winners and the prize pool should be split among them: Killer does not currently provide a tie-breaker, though this is something we will incorporate in the very near future</li>
-              <li>If significant numbers of Premier League games are called off for any reason, Killer will suspend itself for that week. Otherwise, it's every player's responsibility to pick a team they know will play that week</li>
+              <li>If the player's chosen team wins, they progress to the next round. <b>If they lose or draw, the player is eliminated</b></li>
+              <li><b>The deadline for submitting your choices for the week is around 12 noon (UK time) on Saturdays.  Players failing to submit teams before then will be assigned random teams (autopicks)</b></li>
               <li>Late entries (i.e. after a league's matches have started) are not possible</li>
+              <li>If ALL remaining players fail to pick a winner, the round is reset and no one is eliminated</li>
+              <li><b>The last player standing is the champion</b></li>
+              <li>A tiebreak question will be provided for the last weekend of the Premier League, to ensure all leagues can be won.</li>
               <li>Players will only be able to see their leaguemates' weekly picks after the week's deadline has passed</li>
-              <li>Any disputes will be decided unilaterally by <a href="mailto:chairman@killer.football?subject=Feedback" target="_blank">the creator of Killer</a>. Be warned: he has no time for shenanigans - no time</li>
-              <li>All feedback is welcome, especially during the beta phase in August. <a href="mailto:chairman@killer.football?subject=Feedback" target="_blank">chairman@killer.football</a></li>
-              <li>Killer was created by Alex Rubner using Meteor. Original artwork (coming soon) by Electric Bugle</li>
+              <li>Any disputes will be decided unilaterally by <a href="mailto:chairman@killer.football?subject=Feedback" target="_blank">the creator of Killer</a>.</li>
             </ul>
           </div>
           <div class="modal-footer">
