--- a/app/client/templates/MyKillerAccount.html
+++ b/app/client/templates/MyKillerAccount.html
@@ -6,7 +6,7 @@
     <li class="navbar-link"><a href="#" id="changeEmailButton" class="modalButton" data-modal="modalChangeEmailForm">Change email</a></li>
     <li class="navbar-link"><a href="#" id="changePwdButton" class="modalButton" data-modal="modalChangePwdForm">Change password</a></li>
     <li class="navbar-link"><a href="#" id="logoutButton">Logout</a></li>
-    <li class="navbar-link"><a href="mailto:chairman@killer.football?subject=Help">Email help</a></li>
+    <li class="navbar-link"><a href="mailto:chairman@killer.football?subject=Help" target="_blank">Email help</a></li>
   </ul>
 </li>
 </template>
