--- a/app/client/templates/bits/KillerGameweekMatches.html
+++ b/app/client/templates/bits/KillerGameweekMatches.html
@@ -9,9 +9,9 @@
       <div class="row row-centered collapse" id="collapseFixtures">
         {{#each listOfCurrentMatches}}
         <div class="col-xs-1 col-sm-1 col-md-1 col-centered match-text">
-          <span class="home-team">{{home}}</span>
+          <span class="home-team">{{shorten home}}</span>
           <p class="horizontal-line"></p>
-          <span class="away-team">{{away}}</span>
+          <span class="away-team">{{shorten away}}</span>
         </div>
         {{/each}}
       </div>
