--- a/app/client/templates/leagues/KillerAliveLeagues.html
+++ b/app/client/templates/leagues/KillerAliveLeagues.html
@@ -64,6 +64,7 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                   <ul class="players-list">
+                    <h5>Eliminated players</h5>
                     {{#each deadMembers}}
                       <li><i class="fa fa-bomb"></i> {{memberName}} (round {{diedInRound}})</li>
                     {{/each}}
