--- a/app/client/templates/modals/StartKillerLeague.html
+++ b/app/client/templates/modals/StartKillerLeague.html
@@ -17,10 +17,10 @@
                 <fieldset>
                   <div id="startLeagueIntro">
                     <p>
-                      Starting a new league couldn't be simpler! Just choose a name (nothing too naughty, please), and pick which weekend you want to start with.
+                      Starting a new league couldn't be simpler! Just choose a name and pick which weekend you want to start with.
                     </p>
                     <p>
-                      Once you've created your league, we'll show you how to invite your friends to play.
+                      Once you've created your league, you'll get a unique code to send to your friends so they can join you.
                     </p>
                     <p>
                       If you have any questions, just email <a href="mailto:chairman@killer.football?subject=help">chairman@killer.football</a>
